--- a/NoDecentDiary/Pages/PageWrite.razor
+++ b/NoDecentDiary/Pages/PageWrite.razor
@@ -39,13 +39,12 @@
         <ChildContent>
             <MList MinWidth="150">
                 <MListItem Dense
-                           Ripple="false" 
                            OnClick="()=>showTitle = !showTitle">
                     <MListItemContent>
                         @(showTitle ? "关闭标题" : "开启标题")
                     </MListItemContent>
                 </MListItem>
-                <MListItem Dense Ripple="false">
+                <MListItem Dense>
                     <MListItemContent>
                         切换至富文本
                     </MListItemContent>
