--- a/NoDecentDiary/Shared/DiaryCardList.razor
+++ b/NoDecentDiary/Shared/DiaryCardList.razor
@@ -38,7 +38,7 @@
     </div>
 }
 
-<SelectTags @bind-Value="showSelectTag"
+<SelectTags @bind-Value="ShowSelectTag"
             @bind-Values="SelectedTags"
             OnSave="HandOnSaveSelectTags">
 </SelectTags>
