--- a/NoDecentDiary/Shared/InputTag.razor
+++ b/NoDecentDiary/Shared/InputTag.razor
@@ -13,6 +13,7 @@
             <MTextField Value="Text"
                         ValueChanged="TextChanged"
                         Dense
+                        Autofocus
                         HideDetails="@("auto")"
                         Outlined
                         Counter="20"
