--- a/NoDecentDiary/Pages/Index.razor
+++ b/NoDecentDiary/Pages/Index.razor
@@ -29,7 +29,7 @@
                 @(DateTime.Now.ToString("yyyy/MM/dd") + " " + DateTime.Now.DayOfWeek.ToChinese2())
             </MSubheader>
 
-            <h3>早上好，又是全新的一天</h3>
+            <div class="text-h6 font-weight-bold">早上好，又是全新的一天</div>
         </div>
 
         <DiaryCardList Value="Diaries"></DiaryCardList>
@@ -39,8 +39,10 @@
             @foreach (var item in Tags)
             {
                 <MCard Class="mb-5 tag-card"
-                   Rounded="@("lg")">
-                    <MListItem OnClick="()=>HandOnTagClick(item.Id)">
+                   Ripple="false"
+                   Rounded="@("lg")"
+                   OnClick="()=>HandOnTagClick(item.Id)">
+                    <MListItem>
                         <MListItemIcon>
                             <MIcon>
                                 mdi-label-outline
@@ -98,7 +100,7 @@
              Bottom
              Right
              Fixed
-             Href="/Write"
+             OnClick="NavigateToWrite"
              Fab>
             <MIcon>
                 mdi-pencil
@@ -116,7 +118,7 @@
              Bottom
              Right
              Fixed
-             OnClick="()=>showAddTag=true"
+             OnClick="()=>ShowAddTag=true"
              Fab>
             <MIcon>
                 mdi-plus
@@ -125,13 +127,13 @@
     </FabTransition>
 }
 
-<InputTag @bind-Value="showEditTag"
+<InputTag @bind-Value="ShowEditTag"
           @bind-Text="EditTagName"
           Title="重命名标签"
           OnSave="HandOnSaveEditTag">
 
 </InputTag>
-<InputTag @bind-Value="showAddTag"
+<InputTag @bind-Value="ShowAddTag"
           @bind-Text="AddTagName"
           Title="添加标签"
           OnSave="HandOnSaveAddTag">
