--- a/NoDecentDiary/Shared/SelectTags.razor
+++ b/NoDecentDiary/Shared/SelectTags.razor
@@ -41,6 +41,7 @@
 </MDialog>
 
 <InputTag @bind-Value="ShowAddTag"
-        @bind-Text="AddTagName"
-        Title="添加标签"
-        OnSave="HandleOnSaveAddTag"></InputTag>
+          @bind-Text="AddTagName"
+          Title="添加标签"
+          OnSave="HandleOnSaveAddTag">
+</InputTag>
