--- a/NoDecentDiary/Shared/MainLayout.razor
+++ b/NoDecentDiary/Shared/MainLayout.razor
@@ -2,10 +2,10 @@
 
 <MApp>
     <MMain>
-        <MDivider></MDivider>
         @if (MasaBlazor!.Breakpoint.SmAndUp)
         {
             <MNavigationDrawer App
+                           Floating
                            Style="max-height:unset;"
                            Permanent>
                 <MList Rounded>
