--- a/NoDecentDiary/Shared/TagCardList.razor
+++ b/NoDecentDiary/Shared/TagCardList.razor
@@ -13,7 +13,7 @@
 {
     <div class="d-flex justify-center" style="padding-top:20vh;">
         <div class="text-h6 text--secondary font-weight-bold-table">
-            暂无日记
+            暂无标签
         </div>
     </div>
 }
