feat(PageRead) : update share style

--- a/NoDecentDiary/Pages/PageRead.razor
+++ b/NoDecentDiary/Pages/PageRead.razor
@@ -140,7 +140,7 @@
                 <MIcon>mdi-close</MIcon>
             </MButton>
         </MCardTitle>
-        <MCardText>
+       <MList>
             <MListItem OnClick="TextShare">
                 <MListItemIcon>
                     <MIcon>
@@ -161,7 +161,7 @@
                     <MListItemTitle>图片分享</MListItemTitle>
                 </MListItemContent>
             </MListItem>
-        </MCardText>
+       </MList>
     </MCard>
 </MDialog>
 
