--- a/NoDecentDiary/Pages/PageMine.razor
+++ b/NoDecentDiary/Pages/PageMine.razor
@@ -1,2 +1,16 @@
 ﻿@page "/Mine"
-<h2>Mine</h2>
+
+<MContainer>
+    <MCard>
+        <MList>
+            <MListItem OnClick="ToLog">
+                <MListItemContent>
+                    日志
+                </MListItemContent>
+                <MListItemAction>
+                    <MIcon>mdi-chevron-right</MIcon>
+                </MListItemAction>
+            </MListItem>
+        </MList>
+    </MCard>
+</MContainer>
