--- a/NoDecentDiary/Shared/SelectTags.razor
+++ b/NoDecentDiary/Shared/SelectTags.razor
@@ -3,7 +3,7 @@
          MaxWidth="420"
          Scrollable>
     <MCard>
-        <MCardTitle>
+        <MCardTitle Class="font-weight-bold">
             选择标签
             <MSpacer></MSpacer>
             <MButton Icon OnClick="HandleOnCancel">
