--- a/NoDecentDiary/Pages/PageRead.razor
+++ b/NoDecentDiary/Pages/PageRead.razor
@@ -56,7 +56,7 @@
                     </MListItemContent>
                 </MListItem>
                 <MListItem Dense
-                           OnClick="()=>Topping(_diary)">
+                           OnClick="()=>Topping(Diary)">
                     <MListItemContent>
                         @(Top ? "取消置顶" : "置顶")
                     </MListItemContent>
@@ -74,55 +74,77 @@
 <ScrollContainer Id="scrolling-read">
     <MContainer Id="screenshot">
         <div class="px-3 text-h6 font-weight-bold">
-            @(_diary.CreateTime.ToString("yyyy/MM/dd"))
+            <span>@(Diary.CreateTime.ToString("yyyy/MM/dd"))</span>
+            <span class="pl-5 text-subtitle-1">@(Diary.CreateTime.DayOfWeek.ToChinese2())</span>
         </div>
+        <div class="px-2">
+            @if(ShowWeather)
+            {
+                <MChip Class="my-2 mr-2"
+                   Outlined="Mobile"
+                   Small="Mobile">
+                    <MIcon Left Small="Mobile">
+                        @(GetWeatherIcon(Diary.Weather))
+                    </MIcon>
+                    @(Diary.Weather)
+                </MChip>
+            }
 
-        @if (ShowWeather)
-        {
-            <div class="overflow-hidden" style="max-width:100px;">
-                <MTextField Solo
-                        Dense
-                        Readonly
-                        Color="transparent"
-                        HideDetails="@("auto")"
-                        Value="_diary.Weather">
-                </MTextField>
-            </div>
-        }
+            @if(ShowMood)
+            {
+                <MChip Class="my-2 mr-2"
+                   Outlined="Mobile"
+                   Small="Mobile">
+                    <MIcon Left Small="Mobile">
+                        @(GetMoodIcon(Diary.Mood))
+                    </MIcon>
+                    @(Diary.Mood)
+                </MChip>
+            }
+           
+            @if(ShowLocation)
+            {
+                <MChip Class="my-2 mr-2"
+                   Outlined="Mobile"
+                   Small="Mobile">
+                    <MIcon Left Small="Mobile">
+                        mdi-map-marker-outline
+                    </MIcon>
+                    @(Diary.Location)
+                </MChip>
+            }
+        </div>
 
         @if (ShowTitle)
         {
-            <div class="my-sm-4 overflow-hidden-mobile user-select">
-                <MTextField Value="@(_diary.Title)"
-                        Solo="!IsDesktop"
-                        Outlined="IsDesktop"
-                        TValue="string"
-                        HideDetails="@("auto")"
-                        Class="pb-0"
-                        Dense
-                        Readonly
-                        maxlength="20">
-                </MTextField>
-            </div>
+            <MTextField Value="@(Diary.Title)"
+                    Class="pb-0 my-sm-4 user-select"
+                    Solo="!Desktop"
+                    Outlined="Desktop"
+                    TValue="string"
+                    HideDetails="@("auto")"
+                    Dense
+                    Readonly
+                    maxlength="20">
+            </MTextField>
         }
 
-        <div class="my-sm-4 overflow-hidden-mobile user-select">
-            <MTextarea Value="@(_diary.Content)"
-                       Solo="!IsDesktop"
-                       Outlined="IsDesktop"
-                       HideDetails="@("auto")"
-                       Readonly
-                       AutoGrow
-                       Rows="8"
-                       RowHeight="30">
-            </MTextarea>
-        </div>
+        <MTextarea Value="@(Diary.Content)"
+                   Class="my-sm-4 user-select"
+                   Solo="!Desktop"
+                   Outlined="Desktop"
+                   HideDetails="@("auto")"
+                   Readonly
+                   AutoGrow
+                   Rows="8"
+                   RowHeight="30">
+        </MTextarea>
 
         <div class="mb-5">
             <MChipGroup Column>
                 @foreach (var item in SelectedTags)
                 {
-                    <MChip Outlined="!IsDesktop">
+                    <MChip Outlined="!Desktop">
                         @(item.Name)
                     </MChip>
                 }
