--- a/NoDecentDiary/Pages/PageSearch.razor
+++ b/NoDecentDiary/Pages/PageSearch.razor
@@ -15,8 +15,9 @@
                 Flat
                 Autofocus
                 Clearable
-                Placeholder="请输入日记关键词"
-                HideDetails="@("auto")">
+                HideDetails="@("auto")"
+                spellcheck="false"
+                Placeholder="请输入日记关键词">
     </MTextField>
 
 </MAppBar>
