--- a/NoDecentDiary/Shared/InputTag.razor
+++ b/NoDecentDiary/Shared/InputTag.razor
@@ -18,6 +18,7 @@
                         Outlined
                         Counter="20"
                         maxlength="20"
+                        spellcheck="false"
                         Placeholder="请输入标签名称">
             </MTextField>
         </MCardText>
