feat(PageHistory) : add type

--- a/NoDecentDiary/Pages/PageHistory.razor
+++ b/NoDecentDiary/Pages/PageHistory.razor
@@ -22,7 +22,7 @@
     </MButton>
 </MAppBar>
 
-<SwiperTabItems @bind-Value="tabs">
+<SwiperTabItems @bind-Value="tabs" RefreshData="HandOnRefreshData">
     <SwiperTabItem>
         <MDatePicker @bind-Value="Picker"
                      FullWidth
